--- a/Module_0/E1/e1.html
+++ b/Module_0/E1/e1.html
@@ -8,10 +8,10 @@
 </head>
 <body>
    
-    <p>Manier 1</p>
+    <p>inline</p>
     <button onclick="alert('Tot ziens!')">Hallo!</button>
 
-    <p>Manier 2</p>
+    <p>script_tag</p>
 
     <button onclick="zegHallo()">Hallo!</button>
 
@@ -22,7 +22,7 @@
         }
     </script>
 
-    <p>Manier 3</p>
+    <p>external</p>
 
     <button id="hallo" onclick="totZiens()">Hallo!</button>
 
